# kiara

./: .gitignore  CMakeLists.txt  Makefile  README.rdoc  build_options.cmake  cat_kiara_constants.rb  colors.rb  kiara  kiara.rb  main_actions.rb  pattern_list.rb  piano_roll.rb  playlist.rb  settings.rb  ui.glade  ui.rb  ui_settings.rb
engine/: Makefile  event.cxx  event.hh  events_merger.cxx  kiara.i  memory.hh  midi_out.cxx  midi_out.hh  pattern.cxx  pattern.hh  pattern_storage.cxx  phrase.cxx  playlist.cxx  playlist.hh  pool.cxx  pool.hh  transport.cxx  transport.hh
gtk-theme/gtk-2.0/: gtkrc~
lib/: Makefile  basic_flow.dia  bus.cxx  bus.hh  engine.cxx  engine.hh  events_merger.hh  kiara-config.h  kiara.i  memory.cxx  pattern.cxx  pattern_storage.hh  phrase.hh  playlist.hh  test_kiara.rb  timer.hh  transport.cxx  transport.hh  transport_position.hh
lib/controller/: blockbox.rb  blockbox_indexer.rb  blockbox_storage.rb  cluster.rb  controller.rb  device.rb  event.rb  keymap.rb  mapping.rb  mapping_context.rb  mapping_context_eval.rb  mapping_engine.rb  mapping_loader.rb  note_block.rb  pattern_list.rb  phrase.rb  piano_roll.rb  playlist.rb  save.rb  serialization.rb  widget_controller.rb
lib/engine/: CMakeLists.txt  Makefile  block.cxx  block.hh  block_device.cxx  block_device.hh  bus.cxx  bus.hh  chan_merger.cxx  chan_merger.hh  cluster.cxx  cluster.hh  curve_block.cxx  curve_block.hh  engine.cxx  engine.hh  event.cxx  event.hh  event_scheduler.cxx  event_scheduler.hh  events_merger.cxx  events_merger.hh  kiara-config.h  kiara.i  memory.cxx  midi_out.cxx  midi_out.hh  note_block.cxx  note_block.hh  note_scheduler.cxx  note_scheduler.hh  pattern.cxx  pattern.hh  pattern_storage.cxx  pattern_storage.hh  phrase.cxx  phrase.hh  playlist.cxx  playlist.hh  pool.cxx  (+14 more)
lib/mappings/: test_mapping.rb
lib/ui/: blockbox_view.rb  cluster_view.rb  colors.rb  device_view.rb  main_actions.rb  noteblock_view.rb  pattern_list.rb  phrase_view.rb  piano_roll.rb  piano_roll_attributes.rb  piano_roll_events.rb  piano_view.rb  playlist.rb  position_view.rb  (+6 more)
mappings/: mapping_base.rb  mapping_noteblock.rb  mapping_patterns.rb  mapping_phrase.rb  mapping_pianoroll.rb  mapping_playlist.rb  test_mapping.rb
themes/: purple-cricket.ktheme
